@@ -16,6 +16,7 @@
 
 """Tests for bzrdir implementations - tests a bzrdir format."""
 
+from cStringIO import StringIO
 import os
 from stat import *
 import sys
@@ -1114,6 +1115,103 @@ class TestBzrDir(TestCaseWithBzrDir):
         dir = self.make_bzrdir('.')
         text = dir._format.get_format_description()
         self.failUnless(len(text))
+
+
+class TestBreakLock(TestCaseWithBzrDir):
+
+    def setUp(self):
+        super(TestBreakLock, self).setUp()
+        # we want a UI factory that accepts canned input for the tests:
+        # while SilentUIFactory still accepts stdin, we need to customise
+        # ours
+        self.old_factory = bzrlib.ui.ui_factory
+        bzrlib.ui.ui_factory = bzrlib.ui.SilentUIFactory()
+
+    def tearDown(self):
+        bzrlib.ui.ui_factory = self.old_factory
+
+    def test_break_lock_empty(self):
+        # break lock on an empty bzrdir should work silently.
+        dir = self.make_bzrdir('.')
+        try:
+            dir.break_lock()
+        except NotImplementedError:
+            pass
+
+    def test_break_lock_repository(self):
+        # break lock with just a repo should unlock the repo.
+        repo = self.make_repository('.')
+        repo.lock_write()
+        # only one yes needed here: it should only be unlocking
+        # the repo
+        bzrlib.ui.ui_factory.stdin = StringIO("y\n")
+        try:
+            repo.bzrdir.break_lock()
+        except NotImplementedError:
+            # this bzrdir does not implement break_lock - so we cant test it.
+            repo.unlock()
+            return
+        lock_repo = repo.bzrdir.open_repository()
+        lock_repo.lock_write()
+        lock_repo.unlock()
+        self.assertRaises(errors.LockBroken, repo.unlock)
+
+    def test_break_lock_branch(self):
+        # break lock with just a repo should unlock the branch.
+        # and not directly try the repository.
+        # we test this by making a branch reference to a branch
+        # and repository in another bzrdir
+        # for pre-metadir formats this will fail, thats ok.
+        master = self.make_branch('branch')
+        thisdir = self.make_bzrdir('this')
+        try:
+            bzrlib.branch.BranchReferenceFormat().initialize(
+                thisdir, master)
+        except errors.IncompatibleFormat:
+            return
+        unused_repo = thisdir.create_repository()
+        master.lock_write()
+        unused_repo.lock_write()
+        # two yes's : branch and repository. If the repo in this
+        # dir is inappropriately accessed, 3 will be needed, and
+        # we'll see that because the stream will be fully consumed
+        bzrlib.ui.ui_factory.stdin = StringIO("y\ny\ny\n")
+        master.bzrdir.break_lock()
+        # only two ys should have been read
+        self.assertEqual("y\n", bzrlib.ui.ui_factory.stdin.read())
+        # we should be able to lock a newly opened branch now
+        branch = master.bzrdir.open_branch()
+        branch.lock_write()
+        branch.unlock()
+        # we should not be able to lock the repository in thisdir as its still
+        # held by the explicit lock we took, and the break lock should not have
+        # touched it.
+        repo = thisdir.open_repository()
+        self.assertRaises(errors.LockContention, repo.lock_write)
+        unused_repo.unlock()
+        self.assertRaises(errors.LockBroken, master.unlock)
+
+    def test_break_lock_tree(self):
+        # break lock with a tree should unlock the tree but not try the 
+        # branch explicitly. However this is very hard to test for as we 
+        # dont have a tree reference class, nor is one needed; 
+        # the worst case if this code unlocks twice is an extra question
+        # being asked.
+        tree = self.make_branch_and_tree('.')
+        tree.lock_write()
+        # three yes's : tree, branch and repository.
+        bzrlib.ui.ui_factory.stdin = StringIO("y\ny\ny\ny\n")
+        try:
+            tree.bzrdir.break_lock()
+        except NotImplementedError:
+            # bzrdir does not support break_lock
+            tree.unlock()
+            return
+        self.assertEqual("y\n", bzrlib.ui.ui_factory.stdin.read())
+        lock_tree = tree.bzrdir.open_workingtree()
+        lock_tree.lock_write()
+        lock_tree.unlock()
+        self.assertRaises(errors.LockBroken, tree.unlock)
 
 
 class ChrootedBzrDirTests(ChrootedTestCase):
